fixed input shift in update-form, hidden the form under .fake-btn

--- a/app/posts/static/posts/css/post_editor_style.css
+++ b/app/posts/static/posts/css/post_editor_style.css
@@ -432,6 +432,7 @@ input.edit-like-text {
 .item-editor form {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .form-wrapper-outer {
